# proxyscore

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  action-analysis.md  business-readiness-backlog.md  business-recipes.md  calibration.md  cli.md  construct-validity.md  getting-started.md  governance.md  html-reports.md  measurement-invariance.md  monitoring.md  multi-outcome-validation.md  pca-loading-drift.md  proxy-metrics-guide.md  score-comparison.md  survival-validation.md  time-window-alignment.md
examples/: 01_customer_health.py  README.md
examples/configs/: audit.toml  baseline.toml  compare.toml  monitor.toml
src/proxyscore/: __init__.py  _utils.py  actions.py  adapters.py  alignment.py  audit.py  bias.py  calibration.py  cli.py  comparison.py  config.py  construct.py  construct_validity.py  datasets.py  governance.py  html_report.py  indicators.py  leakage.py  measurement_invariance.py  monitoring.py  multi_outcome.py  pca_drift.py  recipes.py  results.py  stability.py  survival_validation.py  validation.py
tests/: test_actions.py  test_alignment.py  test_audit.py  test_bias_leakage.py  test_calibration.py  test_cli.py  test_comparison.py  test_construct.py  test_construct_validity.py  test_docs.py  test_governance.py  test_hardening.py  test_hardening_round2.py  test_hardening_round3.py  test_hardening_round4.py  test_hardening_round5.py  test_html_report.py  test_indicators.py  test_measurement_invariance.py  test_monitoring.py  test_multi_outcome.py  test_pca_drift.py  test_recipes_adapters.py  test_stability_validation.py  test_survival_validation.py
