[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxyscore"
version = "0.1.0"
description = "Construct, validate, and monitor proxy scores for latent business constructs - for when the business needs a number for something it cannot directly observe."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Michael", email = "michael@mbagalman.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]
keywords = [
    "proxy-score",
    "latent-construct",
    "construct-validity",
    "customer-health",
    "lead-scoring",
    "psi",
    "leakage",
    "validation",
    "analytics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/mbagalman/proxyscore"
Issues = "https://github.com/mbagalman/proxyscore/issues"
Changelog = "https://github.com/mbagalman/proxyscore/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pandas-stubs>=2.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/proxyscore"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
